--- a/src/assets/css/depositWithdraw.css
+++ b/src/assets/css/depositWithdraw.css
@@ -1413,7 +1413,7 @@
 }
 
 .congo1 {
-  background-image: url("/src/assets/icon/congo.svg");
+  background-image: url("/icon/congo.svg");
   height: 10.37rem;
   width: 13.5rem;
   background-repeat: no-repeat;
