--- a/src/assets/css/depositWithdraw.css
+++ b/src/assets/css/depositWithdraw.css
@@ -137,6 +137,7 @@
   position: fixed;
   display: flex;
   align-items: flex-end;
+  justify-content: center;
   inset: 0;
   background: rgba(28, 28, 28, 0.7);
   -webkit-backdrop-filter: blur(1px);
