--- a/src/assets/css/depositWithdraw.css
+++ b/src/assets/css/depositWithdraw.css
@@ -1026,10 +1026,12 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  max-width: 600px;
   border-radius: 1.5rem 1.5rem 0rem 0rem;
   background: #fff;
   z-index: 9999999999;
   animation: slide-in 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  border-radius: 15px;
 }
 
 .card-add-bank {
@@ -1058,7 +1060,7 @@
   background-color: #fff;
   background-clip: border-box;
   border: var(--bs-card-border-width) solid var(--bs-card-border-color);
-  border-radius: var(--bs-card-border-radius);
+  border-radius: 5px;
 }
 .deposit-withdraw .card-header {
   padding: 0.5rem 1rem;
