--- a/src/pages/Affiliate/affiliate.css
+++ b/src/pages/Affiliate/affiliate.css
@@ -508,14 +508,8 @@ table {
 /*Footer starts  */
 
 .affilate_footer[data-v-066114c4] {
-  position: fixed;
-  bottom: 50px;
-  left: 50%;
-  z-index: 9;
-  margin: auto;
   width: 100%;
-  max-width: 768px;
-  transform: translate(-50%);
+  margin-bottom: 60px;
 }
 
 footer[data-v-066114c4] {
@@ -534,17 +528,24 @@ footer[data-v-066114c4] {
 }
 
 .affilate_footer a.active[data-v-066114c4] {
-  background: linear-gradient(1turn, var(--theme1-bg), #3e444b);
+  background: var(--theme1-bg);
   color: #fff;
 }
 
 .affilate_footer nav a[data-v-066114c4] {
   text-decoration: none;
-  color: #000;
+  color: #666;
   display: flex;
   align-items: center;
-  padding: 5px 10px;
-  border-radius: 30px;
+  padding: 0px 10px;
+  border-radius: 10px;
+}
+
+.affilate_footer nav a[data-v-066114c4]:hover {
+  color: #666;
+}
+.affilate_footer nav a.active:hover {
+  color: #fff;
 }
 
 .affilate_footer nav a.active img[data-v-066114c4] {
@@ -554,11 +555,11 @@ footer[data-v-066114c4] {
 }
 
 .affilate_footer nav a img[data-v-066114c4] {
-  width: 24px;
-  height: 24px;
+  width: 18px;
+  height: 18px;
   margin-right: 8px;
   transition: transform 0.3s;
-  filter: brightness(0.3);
+  filter: brightness(0.6);
 
   object-fit: contain;
 }
@@ -572,7 +573,6 @@ footer[data-v-066114c4] {
 .affilate_footer nav a span[data-v-066114c4] {
   font-size: 13px;
   font-weight: 500;
-  display: none;
 }
 
 /*Footer end  */
@@ -810,4 +810,17 @@ tr {
 
 .af-share-social-link-sec a img {
   width: 35px;
+}
+
+.rs-pagination-btn.rs-pagination-btn-active {
+  color: black !important;
+  background-color: transparent;
+  border: 1px solid var(--theme1-bg) !important;
+}
+
+.rs-pagination-md .rs-pagination-btn-active {
+  padding: 3px 5px !important;
+}
+.rs-pagination-md .rs-pagination-btn {
+  padding: 3px 5px !important;
 }
