--- a/src/index.css
+++ b/src/index.css
@@ -703,3 +703,62 @@ html * {
   border-radius: 5px;
   padding: 2px;
 }
+
+.casino-title {
+  display: block;
+  background: var(--theme1-bg);
+  height: auto;
+  line-height: normal;
+  padding: 10px 0 10px 10px;
+  position: relative;
+  color: #fff;
+  margin-bottom: 2px;
+  text-transform: uppercase;
+  font-weight: 900;
+}
+
+.casino_searchbar {
+  position: absolute;
+  z-index: 9;
+  right: 3px;
+  top: 3px;
+  border: 1px solid var(--theme1-bg);
+}
+
+.input-group {
+  position: relative;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  width: 100%;
+}
+
+.casino_searchbar span.input-group-text {
+  background: none;
+  background: #bb1919;
+  border-radius: 0;
+  border: none;
+  padding: 0 10px;
+  height: 30px;
+}
+
+.input-group-text {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #e9ecef;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
